// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals EngagementRecencyPreview Component renders correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <BarChart
        disableHover={true}
        gap={0.5}
        height={170}
        isLink={true}
        margin={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 0,
            "top": 12,
          }
        }
        shouldHighlightSelected={true}
        timeSeries={
          Array [
            1,
            2,
            3,
          ]
        }
        width="99%"
        xAxisProps={
          Object {
            "hide": true,
          }
        }
        xAxisRefLines={Array []}
        xKey="date"
        yAxisProps={
          Object {
            "domain": Array [
              0,
              1,
            ],
            "tickFormatter": [Function],
            "ticks": Array [
              0,
              0.25,
              0.5,
              0.75,
              1,
            ],
          }
        }
        yAxisRefLines={Array []}
        yKey="value"
        yKeys={
          Array [
            Object {
              "OGFill": "#1A838B",
              "OGStroke": "#1A838B",
              "description": "0-14 days since last engagement",
              "hibanaFill": "#1a497d",
              "hibanaStroke": "#1a497d",
              "key": "c_14d",
              "label": "Recently Engaged",
            },
            Object {
              "OGFill": "#219EA8",
              "OGStroke": "#219EA8",
              "description": "14-90 days since last engagement",
              "hibanaFill": "#0060cc",
              "hibanaStroke": "#0060cc",
              "key": "c_90d",
              "label": "Semi Recently Engaged",
            },
            Object {
              "OGFill": "#29B9C7",
              "OGStroke": "#29B9C7",
              "description": "90-365 days since last engagement",
              "hibanaFill": "#1273e6",
              "hibanaStroke": "#1273e6",
              "key": "c_365d",
              "label": "Not Recently Engaged",
            },
            Object {
              "OGFill": "#50CFDA",
              "OGStroke": "#50CFDA",
              "description": "365+ days since last engagement",
              "hibanaFill": "#429bff",
              "hibanaStroke": "#429bff",
              "key": "c_uneng",
              "label": "Never Engaged",
            },
            Object {
              "OGFill": "#88E2E7",
              "OGStroke": "#88E2E7",
              "description": "Never engaged, first email in last 7 days",
              "hibanaFill": "#78b6ff",
              "hibanaStroke": "#78b6ff",
              "key": "c_new",
              "label": "New",
            },
          ]
        }
        yRange={
          Array [
            "auto",
            "auto",
          ]
        }
      />
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders empty correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="No Data Available"
      >
        Insufficient data to populate this chart
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders error correctly 1`] = `
<PageLink
  to="/signals/engagement/cohorts/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Engagement Recency"
        tooltipContent="
  The share over time of your email that has been sent to recipients who most recently
  opened messages or clicked links during several defined time periods.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="Unable to Load Data"
      >
        error message
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals EngagementRecencyPreview Component renders loading correctly 1`] = `
<PanelLoading
  accent={false}
  minHeight="170px"
/>
`;
